--- a/TLAutoGrad.ipynb
+++ b/TLAutoGrad.ipynb
@@ -16,6 +16,256 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "tensor([[1., 1.],\n        [1., 1.]], requires_grad=True)\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "x = torch.ones(2, 2, requires_grad=True)\n",
+    "print(x)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "tensor([[3., 3.],\n        [3., 3.]], grad_fn=<AddBackward0>)\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "y = x + 2\n",
+    "print(y)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "<AddBackward0 object at 0x11f3d9780>\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "# y was created as a result of an operation, so it has a grad_fn.\n",
+    "print(y.grad_fn)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "tensor([[27., 27.],\n        [27., 27.]], grad_fn=<MulBackward0>)\ntensor(27., grad_fn=<MeanBackward0>)\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "z = y * y * 3\n",
+    "out = z.mean()\n",
+    "print(z)\n",
+    "print(out)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "False\nTrue\n<SumBackward0 object at 0x11f3a99e8>\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "a = torch.randn(2, 2)\n",
+    "a = ((a * 3) / (a - 1))\n",
+    "print(a.requires_grad)\n",
+    "\n",
+    "a.requires_grad_(True)\n",
+    "print(a.requires_grad)\n",
+    "\n",
+    "b = (a * a).sum()\n",
+    "print(b.grad_fn)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [],
+   "source": [
+    "out.backward()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "tensor([[4.5000, 4.5000],\n        [4.5000, 4.5000]])\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "# Print gradients d(out)/dx\n",
+    "print(x.grad)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "tensor([-1513.9224,   620.0577,  -477.2544], grad_fn=<MulBackward0>)\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "x = torch.randn(3, requires_grad=True)\n",
+    "\n",
+    "y = x * 2\n",
+    "while y.data.norm() < 1000:\n",
+    "    y = y * 2\n",
+    "\n",
+    "print(y)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "tensor([1.0240e+02, 1.0240e+03, 1.0240e-01])\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "v = torch.tensor([0.1, 1.0, 0.0001], dtype=torch.float)\n",
+    "y.backward(v)\n",
+    "\n",
+    "print(x.grad)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "True\nTrue\nFalse\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "print(x.requires_grad)\n",
+    "print((x ** 2).requires_grad)\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    print((x ** 2).requires_grad)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [
